# variant-translation

./: .env.template  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: count_tsv_rows_by_column.py  split_tsv_by_variant_count.py
src/scripts/: compare_reverse_translated_variants.py  reverse_translate_variants.py
tests/: test_compare_reverse_translated_variants.py  test_reverse_translate_variants.py
